After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672842 - Fix annotations
Fix annotations
Status: RESOLVED FIXED
Product: clutter-gst
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: clutter-gst-maint
clutter-gst-maint
Depends on:
Blocks:
 
 
Reported: 2012-03-26 10:41 UTC by Lionel Landwerlin
Modified: 2012-04-27 12:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch v1 (2.40 KB, patch)
2012-03-27 12:57 UTC, Lionel Landwerlin
none Details | Review

Description Lionel Landwerlin 2012-03-26 10:41:14 UTC
Quick fix to remove gir-scanner's warnings.
Comment 1 Damien Lespiau 2012-03-27 10:58:40 UTC
You did not attach a patch?
Comment 2 Lionel Landwerlin 2012-03-27 12:57:03 UTC
Created attachment 210690 [details] [review]
patch v1
Comment 3 Damien Lespiau 2012-04-27 12:27:35 UTC
Pushed, thanks!