fix gir annotations

https://bugzilla.gnome.org/show_bug.cgi?id=672842