clutter-gst/clutter-gst-player.c
@@ -2404,8 +2404,8 @@ clutter_gst_player_set_buffering_mode (ClutterGstPlayer        *player,
  *
  * Get the list of audio streams of the current media.
  *
- * Return value: (transfer none): a list of strings describing the available
- * audio streams
+ * Return value: (transfer none) (element-type utf8): a list of
+ * strings describing the available audio streams
  *
  * Since: 1.4
  */
@@ -2475,8 +2475,8 @@ clutter_gst_player_set_audio_stream (ClutterGstPlayer *player,
  *
  * Get the list of subtitles tracks of the current media.
  *
- * Return value: (transfer none): a list of strings describing the available
- * subtitles tracks
+ * Return value: (transfer none) (element-type utf8): a list of
+ * strings describing the available subtitles tracks
  *
  * Since: 1.4
  */
