clutter-gst/clutter-gst-video-texture.c
@@ -791,8 +791,8 @@ clutter_gst_video_texture_set_buffering_mode (ClutterGstVideoTexture *texture,
  *
  * Get the list of audio streams of the current media.
  *
- * Return value: (transfer none): a list of #GstTagList describing the
- * available audio streams
+ * Return value: (transfer none) (element-type Gst.TagList): a list of
+ * #GstTagList describing the available audio streams
  *
  * Since: 1.4
  */
@@ -844,8 +844,8 @@ clutter_gst_video_texture_set_audio_stream (ClutterGstVideoTexture *texture,
  *
  * Get the list of subtitles tracks of the current media.
  *
- * Return value: (transfer none): a list of #GstTagList describing the
- * available subtitles tracks
+ * Return value: (transfer none) (element-type Gst.TagList): a list
+ * of #GstTagList describing the available subtitles tracks
  *
  * Since: 1.4
  */
